z-index bug fixed

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -22,7 +22,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 9999 ;
+        z-index: 8055;
         width: 100%;
         background: #ffffff;
         height: 40px;
